diss: structure of chapter, intro par to central model section

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -298,6 +298,20 @@
     Title = {Markov Chain Monte Carlo in Practice},
     Year = {1998}}
 
+@article{2009:bernard,
+    Author = {Bernard, J.-M.},
+    Journal = {{International Journal of Approximate Reasoning}},
+    Pages = {201-268},
+    Title = {Special issue on the imprecise {D}irichlet model},
+    Volume = {50},
+    Year = {2009}}
+
+@phdthesis{2009:quaeghebeur::phd,
+    Author = {Quaeghebeur, E.},
+    School = {Ghent University (available from http://hdl.handle.net/1854/LU-495650)},
+    Title = {Learning from {S}amples {U}sing {C}oherent {L}ower {P}revisions},
+    Year = 2009}
+
 
 
 @incollection{itip-desirable,
