--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -24,8 +24,12 @@
 After having seen a detailed example for Bayesian inference using sets of conjugate priors in Section~\ref{sec:commoncause},
 in the main chapter of this thesis,
 we will give now a general introduction to the methodology of Bayesian inference with sets of conjugate priors.
-In Section ****, \\
-Section **** 
+In Section~\ref{sec:ip-intro} below, we will try to outline the general theory of imprecise or interval probability,
+describing its main formulations and interpretations.
+Section~\ref{sec:motivation} then gives at first some general motives for the use of imprecise probability methodology,
+concluding with the motives especially relevant in the context of the Bayesian approach to statistical inference.
+Then, Section~\ref{sec:imprecisebayes-conjugate} ****
+***Section~\ref{sec:alternatives} ****
 
 
 \section{Imprecise or Interval Probability}
@@ -761,7 +765,32 @@ expresses naturally that the accumulating information is non-conflicting and sta
 \section{Generalised Bayesian Inference for Sets of Conjugate Priors in Exponential Families}
 \label{sec:imprecisebayes-conjugate}
 
-section itip / JSTP paper
+***consists of \textcite[\S 4.3]{itip-statinf}, add some stuff from JSTP paper?****
+
+Imprecise probability models based on conjugate priors are an important model class,
+and have been central to the development and application of imprecise probability methods
+in statistical inference.
+They have lead to the so-called \emph{Imprecise Dirichlet model} (IDM, see Section**** below)
+by \textcite{1996:walley::idm}, see also \textcite{2009:bernard},
+and more generally to powerful imprecise probability models for inference
+based on i.i.d.\ exponential family sampling models by \textcite{2005:quaeghebeurcooman} and \textcite{2009:quaeghebeur::phd}.
+These models were extended by \textcite{Walter2009a} and \textcite{Walter2011a}
+to allow in addition an elegant handling of prior-data conflict.
+
+This Section attempts to give a systematic overview on the different models discussed in the literature,
+illustrating some characteristic modelling opportunities of generalised Bayesian inference.
+
+Section **** then investigates one model in detail *** or presents examples???*** ***JSTP***,
+
+Section **** another attempt to refine ****ISIPTA'11***
+
+***more structure of section?*** 
+
+\subsection{The General Model}
+
+
+
+
 
 \section{Alternative Models Based on Sets of Priors}
 \label{sec:alternatives}
@@ -774,7 +803,7 @@ par on withcomb, then rewrite this:
 
 ``Some computational aspects'' from \textcite[\S 4.2]{itip-statinf} on discretized models (Withcomb!)***
 
-In the case of discrete prior distributions (i.e., distributions with a finite support of size $k$.)
+In the case of discrete prior distributions (i.e., distributions with a finite support of size $k$)
 %(where the unknown parameter can only assume a fixed number $k$ of values, $k < \infty$),
 the computation of posterior credal sets is often done
 via the alternative model formulation as conditional lower previsions
