diss: basic setting pars

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -312,6 +312,24 @@
     Title = {Learning from {S}amples {U}sing {C}oherent {L}ower {P}revisions},
     Year = 2009}
 
+@article{1997:boratynska,
+    Author = {Boraty{\'n}ska, A.},
+    Journal = {Statistics \& Probability Letters},
+    Pages = {173--178},
+    Title = {Stability of {B}ayesian inference in exponential families},
+    Volume = {36},
+    Year = {1997}}
+
+@article{2012:benavolizaffalon,
+    Author = {A. Benavoli and M. Zaffalon},
+    Doi = {10.1016/j.jspi.2012.01.023},
+    Journal = {Journal of Statistical Planning and Inference},
+    Pages = {1960--1979},
+    Title = {A model of prior ignorance for inferences in the one-parameter exponential family},
+    Url = {http://www.sciencedirect.com/science/article/pii/S0378375812000535},
+    Volume = {142},
+    Year = {2012},
+}
 
 
 @incollection{itip-desirable,
