--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -305,5 +305,12 @@ author = "W.F. Werner and M. Hirano and S. Kondo and G. Johanson and J.M. Lanore
   pages = {457--481},
 }
 
-
+@article{2000:priebe,
+  author = {Carey E. Priebe and David J. Marchette},
+  title = {Alternating Kernel and Mixture Density Estimation},
+  journal = {Computational Statistics \& Data Analysis},
+  year = {2000},
+  volume = {35},
+  pages = {43--65},
+}
 
