--- a/intro.tex
+++ b/intro.tex
@@ -411,7 +411,7 @@ An example are prediction bands in regression analysis.
 \end{enumerate}
 
 Both static and predictive conclusions can in fact be formally understood as special cases of \emph{decision making},
-where, more generally, the conclusion is to select certain utility maximizing or loss minimizing acts from a set of possible acts.
+where, more generally, the conclusion is to select certain utility maximising or loss minimising acts from a set of possible acts.
 %By considering an appropriate set of acts and a loss function fitting the inferential objective,
 %the tasks listed above 
 We will flesh this out to some extent in the examples below.%
