diss: switching to subsubsections in intro

--- a/intro.tex
+++ b/intro.tex
@@ -1276,7 +1276,7 @@ As $\yn$ is linear in $\yz$ (see Eq.~\eqref{eq:canonicalupdate}), the posterior 
 For the model to be of any use, we must be able to elicit the bounds for the prior parameters.
 The interval $[\yzl_j,\yzu_j]$ simply represents bounds on the prior expectation of the chance $\alpha_j$.
 
-\paragraph{Fixed Learning Parameter}
+\subsubsection{Fixed Learning Parameter}
 
 Typically, the learning parameter $\nz$ is taken to be $2$
 (not without controversy; see insightful discussions in \textcite{1996:walley::idm}).
@@ -1394,7 +1394,7 @@ $[\yzl_j,\yzu_j]$ and the observed fraction $n_j/n$,
 and this is referred to as \emph{prior-data conflict}
 (see Section****, or \textcite{Walter2009a} for the paper centered around this idea).
 
-\paragraph{Interval for Learning Parameter}
+\subsubsection{Interval for Learning Parameter}
 
 We follow \textcite[p.~19]{1965:good} \parencite[as suggested by][Note~5.4.1, p.~524]{1991:walley},
 and reason about posterior expectations of hypothetical data to elicit $\nzl$ and $\nzu$;
@@ -1569,7 +1569,7 @@ as in Eqs.~\eqref{eq:example:tintervals}, we find similar results:
 \end{align*}
 \end{subequations}
 
-\paragraph{Conclusion}
+\subsubsection{Conclusion}
 
 We have seen that choosing bounds, rather than precise values,
 for the hyperparameters of the Dirichlet prior for the alpha-factors
