diss: setting counters to number and add subsubsection in toc

--- a/head.tex
+++ b/head.tex
@@ -29,6 +29,9 @@
 
 \usepackage[bookmarks]{hyperref}
 
+% setting counters
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Definition der Kopfzeile %%
