diss: properties and criteria subsubsection

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -331,10 +331,27 @@
     Year = {2012},
 }
 
+@book{1999:rueger,
+    Address = {M\"{u}nchen, Wien},
+    Author = {B. R\"{u}ger},
+    Publisher = {Oldenbourg},
+    Title = {Test- und {S}ch\"{a}tztheorie. Band I: {G}rundlagen},
+    Year = {1999}}
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
     title     = "Desirability",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
+@incollection{itip-structural,
+    author    = "Enrique Miranda and Gert de Cooman",
+    title     = "Structural Judgements",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
@@ -365,6 +382,16 @@
 @incollection{itip-computation,
     author    = "Matthias C.M. Troffaes and Robert Hable",
     title     = "Computation",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
+@incollection{itip-elicitation,
+    author    = "Michael Smithson",
+    title     = "Elicitation",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
     year      = "2013",
