diss: convexity discussion in one par, some citations in 1.4

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -379,6 +379,17 @@
     editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
 }
 
+@incollection{itip-decision,
+    author    = "Nathan Huntley and Robert Hable and Matthias M.C. Troffaes",
+    title     = "Decision Making",
+    booktitle = "Introduction to Imprecise Probabilities",
+    publisher = "Wiley",
+    year      = "2013",
+    note      = "In preparation",
+    editor    = "Frank P.A. Coolen and Matthias C. M. Troffaes and Thomas Augustin and Gert de Cooman",
+}
+
+
 @incollection{itip-computation,
     author    = "Matthias C.M. Troffaes and Robert Hable",
     title     = "Computation",
