diss: referencing enumurated items

--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -889,6 +889,7 @@ as well as its generalisation to all sample distributions of the canonical expon
 by \textcite{2005:quaeghebeurcooman} are of this type.
 The approach by \textcite{1997:Boratynska} also belongs to this category,
 as she specifies bounds for $\nz \yz$ while holding $\nz$ constant \parencite[see][p.~1973]{2012:benavolizaffalon}.
+\label{enum:modeltypes-a}
 \item $\nz$ varies in a set $\NZ$, while $\yz$ is fixed.\\
 This type of model is rarely discussed in the literature,
 but is mentioned by \textcite{1991:walley} in {\S 7.8.3} and in {\S 1.1.4}, footnote no.~10.
@@ -908,6 +909,7 @@ which results in different ranges for $\yn$ depending on the value of $\nz$ used
 \item Both $\nz$ and $\yz$ vary in other sets $\PZ \subset (\reals_{>0} \times \Y)$.\\
 In this type, also in the prior parameter set the range of $\yz$ may depend on $\nz$ as in \textcite[\S 2.3]{Walter2011a},
 or, vice versa, the range of $\nz$ may depend on the value of $\yz$, as in \textcite{2012:benavolizaffalon}.
+\label{enum:modeltypes-d}
 \end{enumerate}
 
 
@@ -947,7 +949,8 @@ is similar to the consistency property often employed in frequentist statistics.
 a more imprecise prior $\MZ$ will naturally lead to a more imprecise posterior $\MN$, which carries over to the inferences.
 \end{itemize}
 
-Apart from the above properties that are guaranteed in all of the four model types (a) -- (d),
+Apart from the above properties that are guaranteed in all of the four model types %(a) -- (d),
+\eqref{enum:modeltypes-a} -- \eqref{enum:modeltypes-d},
 one might want the models to adhere to (either of) the following additional criteria:
 \begin{itemize}
 \item \textbf{Prior-data conflict sensitivity.}
